modules/module-2-kubernetes-intro/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quote-app
  labels:
    app: quote-of-the-day
    environment: development
