modules/module-2-kubernetes-intro/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quote-app-network-policy
  namespace: quote-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: quote-app
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: quote-app
